# Internship-Work-on-BOLD-fMRI-simulations

./: .gitignore  CODEOWNERS  README.md  pyproject.toml  requirements.txt  requirements_linux.txt
BOLDswimsuit/: pyproject.toml
BOLDswimsuite/: BOLDconstants.py  BOLDdeterministic.py  BOLDdisplay.py  BOLDgeometry.py  BOLDoffset.py  BOLDsequence.py  BOLDspins.py  BOLDvessel.py  README.md  pyproject.toml
BOLDswimsuite/BOLDswimsuite/: BOLDgeometry.py  BOLDparameters.py  BOLDsequence.py  BOLDsimulation.py  BOLDspins.py  BOLDvessel.py  BOLDvoxel.py
BOLDswimsuite/docs/_build/doctrees/: BOLDswimsuite.doctree  environment.pickle  index.doctree  modules.doctree
BOLDswimsuite/docs/_build/html/: .buildinfo  BOLDswimsuite.html  genindex.html  index.html  modules.html  objects.inv  searchindex.js
BOLDswimsuite/docs/_build/html/_modules/: index.html
BOLDswimsuite/docs/_build/html/_modules/BOLDswimsuite/: BOLDsequence.html  BOLDsimulation.html  BOLDspins.html  BOLDvessel.html  BOLDvoxel.html
BOLDswimsuite/docs/_build/html/_sources/: BOLDswimsuite.rst.txt
BOLDswimsuite/examples/: plotSignalScript2D.py  plotSignalScript2DGrid.py  plotSignalScript3D.py  plotSignalScript3DGrid.py  plotSignalScript3D_modular.py
BOLDswimsuite/lessons/: Lesson0_JupyterNotebooks.ipynb  Lesson1_BOLDvessel.ipynb  Lesson2_BOLDgeometry.ipynb  Lesson3_BOLDspins.ipynb  Lesson4_BOLDsequence.ipynb
BOLDswimsuite/testing/: check_dist.py
boldswimsuite/: BOLDdeterministic.py  BOLDdisplay.py  BOLDgeometry.py  BOLDsequence.py  BOLDspins.py  BOLDutils.py  BOLDvessel.py
docs/: BOLDswimsuite.rst  conf.py  (+1 more)
(+66 files in other folders)
