[tool.poetry]
name = "boldswimsuite"
version = "0.1.0"
description = "Simulation of BOLD fMRI"
authors = ["jacobchausse <jacob.chausse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.23.3"
numba = "^0.56.2"
scipy = "^1.9.1"
tqdm = "^4.64.1"
pathos = "^0.2.9"

ipykernel = { version = "^6.22.0", optional = true }
jupyter = { version = "^1.0.0", optional = true }
vtk = { version = "9.2.6", optional = true }
mayavi = { version = "^4.8.1", optional = true }
matplotlib = { version = "^3.6.0", optional = true }
pyside2 = { version = "^5.15.2.1", optional = true }

[tool.poetry.extras]
lessons = ["ipykernel", "jupyter"]
display = ["vtk", "mayavi", "matplolib", "pyside2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
